Primera versón de parto
Version del estado parto, haciendo falta únicamente asociarlo con los spinners

--- a/BienestarBovino/app/src/main/res/layout/info_estado_reproductivo.xml
+++ b/BienestarBovino/app/src/main/res/layout/info_estado_reproductivo.xml
@@ -235,7 +235,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="date"
         android:minHeight="48dp"
         android:text="fecha"
         android:textAlignment="center"
@@ -251,7 +251,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="date"
         android:minHeight="48dp"
         android:text="fecha"
         android:textAlignment="center"
@@ -267,7 +267,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="date"
         android:minHeight="48dp"
         android:text="fecha"
         android:textAlignment="center"
