--- a/BienestarBovino/app/src/main/res/layout/compra.xml
+++ b/BienestarBovino/app/src/main/res/layout/compra.xml
@@ -46,7 +46,7 @@
         app:layout_constraintVertical_bias="0.555" />
 
     <Button
-        android:id="@+id/buttonRegister2"
+        android:id="@+id/buttonCompraRegister"
         android:layout_width="414dp"
         android:layout_height="54dp"
         android:background="#656642"
