--- a/BienestarBovino/app/src/main/res/layout/gestacion.xml
+++ b/BienestarBovino/app/src/main/res/layout/gestacion.xml
@@ -44,7 +44,7 @@
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Ingrese la fecha"
-        android:inputType="textPersonName"
+        android:inputType="date"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorHint="@android:color/white"
