--- a/BienestarBovino/app/src/main/res/layout/compra.xml
+++ b/BienestarBovino/app/src/main/res/layout/compra.xml
@@ -164,7 +164,7 @@
         app:layout_constraintVertical_bias="0.047" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/spinnerBovinoCompra"
         android:layout_width="308dp"
         android:layout_height="53dp"
         android:contentDescription="@string/app_name"
