--- a/BienestarBovino/app/src/main/res/layout/menu_principal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menu_principal.xml
@@ -21,9 +21,6 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MenuActivity">
@@ -46,11 +43,11 @@
             android:layout_width="417dp"
             android:layout_height="49dp"
             android:background="#146304"
-            android:text="Sincronizar datos"
+            android:text="Cerrar Sesión"
+            android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
