--- a/BienestarBovino/app/src/main/res/layout/menu_principal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menu_principal.xml
@@ -25,19 +25,6 @@
         android:layout_height="match_parent"
         tools:context=".MenuActivity">
 
-        <ImageButton
-            android:id="@+id/imageButtonControlReproductivo"
-            android:layout_width="157dp"
-            android:layout_height="105dp"
-            android:background="@drawable/rectangle_drawable"
-            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/produccion.png"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.846"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.602" />
-
         <Button
             android:id="@+id/btnSincronizar"
             android:layout_width="417dp"
@@ -100,20 +87,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButtonGanado"
-            android:layout_width="158dp"
-            android:layout_height="105dp"
-            android:background="@drawable/rectangle_drawable"
-            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/vaca.png"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.138"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.364"
-            app:srcCompat="@drawable/vaca" />
-
-        <ImageButton
             android:id="@+id/imageButtonPesaje"
             android:layout_width="157dp"
             android:layout_height="105dp"
@@ -124,8 +97,138 @@
             app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.364"
-            app:srcCompat="@drawable/produccion" />
+            app:layout_constraintVertical_bias="0.341"
+            app:srcCompat="@drawable/peso" />
+
+        <ImageButton
+            android:id="@+id/imageButtonGanado"
+            android:layout_width="158dp"
+            android:layout_height="105dp"
+            android:background="@drawable/rectangle_drawable"
+            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/vaca.png"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.138"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.341"
+            app:srcCompat="@drawable/vaca" />
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="158dp"
+            android:layout_height="20dp"
+            android:text="Chequeo Veterinarios"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.138"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.461" />
+
+        <TextView
+            android:id="@+id/textView42"
+            android:layout_width="158dp"
+            android:layout_height="20dp"
+            android:text="Tarea"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.134"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.652" />
+
+        <ImageButton
+            android:id="@+id/imageButtonControlReproductivo"
+            android:layout_width="157dp"
+            android:layout_height="105dp"
+            android:background="@drawable/rectangle_drawable"
+            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/produccion.png"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.854"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.555"
+            app:srcCompat="@drawable/controlreproductivo"/>
+
+        <ImageButton
+            android:id="@+id/imageButtonControlReproductivo2"
+            android:layout_width="157dp"
+            android:layout_height="105dp"
+            android:background="@drawable/rectangle_drawable"
+            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/produccion.png"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.854"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.773"
+            app:srcCompat="@drawable/personal"/>
+
+        <ImageButton
+            android:id="@+id/botonchequeo"
+            android:layout_width="157dp"
+            android:layout_height="105dp"
+            android:background="@drawable/rectangle_drawable"
+            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/image_1.png"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.141"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.555"
+            app:srcCompat="@drawable/vacuna" />
+
+        <ImageButton
+            android:id="@+id/botonchequeo2"
+            android:layout_width="157dp"
+            android:layout_height="105dp"
+            android:background="@drawable/rectangle_drawable"
+            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/image_1.png"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.137"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.773"
+            app:srcCompat="@drawable/tareas" />
+
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="158dp"
+            android:layout_height="20dp"
+            android:text="Control Reproductivo"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.853"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.461" />
+
+        <TextView
+            android:id="@+id/textView43"
+            android:layout_width="158dp"
+            android:layout_height="20dp"
+            android:text="Personal"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.857"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.652" />
 
         <TextView
             android:id="@+id/textView8"
@@ -156,50 +259,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.272" />
-
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="158dp"
-            android:layout_height="20dp"
-            android:text="Chequeo Veterinarios"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.138"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.492" />
-
-        <TextView
-            android:id="@+id/textView25"
-            android:layout_width="158dp"
-            android:layout_height="20dp"
-            android:text="Control Reproductivo"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.853"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.492" />
-
-        <ImageButton
-            android:id="@+id/botonchequeo"
-            android:layout_width="157dp"
-            android:layout_height="105dp"
-            android:background="@drawable/rectangle_drawable"
-            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/image_1.png"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.141"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.602"
-            app:srcCompat="@drawable/image_1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
