--- a/BienestarBovino/app/src/main/res/layout/menu_chequeo.xml
+++ b/BienestarBovino/app/src/main/res/layout/menu_chequeo.xml
@@ -25,13 +25,13 @@
         android:layout_width="157dp"
         android:layout_height="105dp"
         android:background="@drawable/rectangle_drawable"
-        android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/image_1.png"
+        android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/frascomedicina.png"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.618"
-        app:srcCompat="@drawable/image_1" />
+        app:srcCompat="@drawable/frascomedicina" />
 
     <Button
         android:id="@+id/buttonBackVet"
