--- a/BienestarBovino/app/src/main/res/layout/menu_principal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menu_principal.xml
@@ -30,14 +30,13 @@
             android:layout_width="157dp"
             android:layout_height="105dp"
             android:background="@drawable/rectangle_drawable"
-            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/parto.png"
+            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/produccion.png"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.846"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.602"
-            app:srcCompat="@drawable/parto"/>
+            app:layout_constraintVertical_bias="0.602" />
 
         <Button
             android:id="@+id/btnSincronizar"
@@ -193,14 +192,14 @@
             android:layout_width="157dp"
             android:layout_height="105dp"
             android:background="@drawable/rectangle_drawable"
-            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/chequeo.png"
+            android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/image_1.png"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.141"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.602"
-            app:srcCompat="@drawable/chequeo" />
+            app:srcCompat="@drawable/image_1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
